finished most of MVP

--- a/index.html
+++ b/index.html
@@ -68,6 +68,47 @@
           </ul>
         </div>
       </section>
+
+      <section class="table">
+        <h3>Work History</h3>
+        <table>
+          <tr>
+            <th>Yrs</th>
+            <th>Company</th>
+            <th>Title</th>
+            <th>Tech Used</th>
+          </tr>
+          <tr>
+            <td>1</td>
+            <td>Apple</td>
+            <td>Software Engineer</td>
+            <td>Swift</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Microsoft</td>
+            <td>Computer Scientist</td>
+            <td>.Net</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Amazon</td>
+            <td>Dev Ops</td>
+            <td>AWS</td>
+          </tr>
+        </table>
+      </section>
+
+      <footer>
+        <address>
+          <div class="info">
+            <p>1 (888) 888-8888</p>
+
+            <p>sales@greatidea.io</p>
+          </div>
+        </address>
+        <p class="copy">Copyright DJ Coleman 2019</p>
+      </footer>
     </div>
   </body>
 </html>
