--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>DJ's Resume</title>
 
@@ -23,7 +24,7 @@
         <nav>
           <a href="#">Home</a>
           <a href="#">About</a>
-          <a href="#">Portfolio</a>
+          <a href="https://admiring-brattain-123312.netlify.com/">Portfolio</a>
         </nav>
       </header>
 
