Made resume responsive

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container">
       <header>
         <nav>
-          <a href="#">Home</a>
+          <a href="index.html">Home</a>
           <a href="#">About</a>
           <a href="https://admiring-brattain-123312.netlify.com/">Portfolio</a>
         </nav>
